data/derived/sp14/progs/unify/prog0047.ml.out
Characters 60-61:
  (f,b');;
   ^
Error: This expression has type 'a * 'b -> 'a * 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * 'b -> 'a * 'b
